--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gsap": "^3.12.7",
     "howler": "^2.2.4",
     "lenis": "^1.1.27",
-    "next": "14.1.0",
+    "next": "^16.1.6",
     "nodemailer": "^6.9.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.0",
