--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.12",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^18.3.12",
