Configure contact form to send emails directly to bharatg03246@gmail.com
Set Gmail SMTP configuration in vercel.json for contact form
SMTP_PASS should be set as environment variable in Vercel dashboard

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,12 @@
     "app/api/contact/route.ts": {
       "runtime": "nodejs18.x"
     }
+  },
+  "env": {
+    "CONTACT_EMAIL_TO": "bharatg03246@gmail.com",
+    "CONTACT_EMAIL_FROM": "Portfolio <bharatg03246@gmail.com>",
+    "SMTP_HOST": "smtp.gmail.com",
+    "SMTP_PORT": "587",
+    "SMTP_USER": "bharatg03246@gmail.com"
   }
 }
