--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gsap": "^3.12.7",
     "howler": "^2.2.4",
     "lenis": "^1.1.27",
-    "next": "^16.1.6",
+    "next": "14.1.0",
     "nodemailer": "^6.9.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
